--- a/home.html
+++ b/home.html
@@ -21,19 +21,19 @@
     </div>
     <div class="bg-gray-200 border-t border-b border-gray-400">
       <div class="container mx-auto flex items-center overflow-x-auto">
-        <a class="min-w-140 min-w-md-auto border-b-2 border-green-400 w-full text-center py-4">
+        <a class="min-w-140 min-w-md-auto border-b-2 border-green-400 w-full text-center py-4 cursor-pointer">
           <span class="font-light">All</span>
         </a>
-        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 hover:border-green-400">
+        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 cursor-pointer hover:border-green-400">
           <span class="font-light">Unknown</span>
         </a>
-        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 hover:border-green-400">
+        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 cursor-pointer hover:border-green-400">
           <span class="font-light">Female</span>
         </a>
-        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 hover:border-green-400">
+        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 cursor-pointer hover:border-green-400">
           <span class="font-light">Male</span>
         </a>
-        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 hover:border-green-400">
+        <a class="min-w-140 min-w-md-auto border-b-2 border-transparent w-full text-center py-4 cursor-pointer hover:border-green-400">
           <span class="font-light">Genderless</span>
         </a>
       </div>
@@ -41,7 +41,7 @@
     <div class="container mx-auto py-12 px-4 md:px-0">
       <div class="flex items-center">
         <p>Mostrar favoritos:</p>
-        <div class="py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+        <div class="py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
             <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
           </svg>
@@ -55,7 +55,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-6">
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -78,7 +78,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-yellow-400 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-yellow-400 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -101,7 +101,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -124,7 +124,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -147,7 +147,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -170,7 +170,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -193,7 +193,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -216,7 +216,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-yellow-400 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-yellow-400 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -239,7 +239,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -262,7 +262,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -285,7 +285,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
@@ -308,7 +308,7 @@
         </div>
         <div class="border rounded-xl border-gray-400 flex relative">
           <img class="item-img" src="./img/item-1.png" alt="">
-          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full text-gray-600 ml-2 hover:text-yellow-400">
+          <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
             </svg>
