--- a/home.html
+++ b/home.html
@@ -472,5 +472,163 @@
     <footer class="footer">
       <img src="./img/suazo.png" alt="">
     </footer>
+
+    <!-- modal -->
+    <div class="modal">
+      <div class="modal-content rounded-xl">
+        <div class="modal-banner rounded-t-xl relative">
+          <img src="./img/bg.png" alt="">
+          <div class="flex items-center justify-center flex-col mt-neg-90">
+            <div class="relative mb-4">
+              <img src="./img/user.png" alt="">
+              <div class="modal-star py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                </svg>
+              </div>
+            </div>
+            <div class="close cursor-pointer">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+              </svg>
+            </div>
+            <p class="text-sm font-light text-gray-600 mb-1">ALIVE</p>
+            <h2 class="mb-1 text-lg">Beth Smith</h2>
+            <p class="text-sm font-light text-gray-600">HUMAN</p>
+          </div>
+        </div>
+        <div class="m-4 border-b border-gray-400 pb-4">
+          <p class="text-gray-600 text-lg pb-2">Información</p>
+          <div class="grid md:grid-cols-3 gap-4">
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <div class="flex items-center justify-center text-gray-600">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+                </svg>
+                <p class="text-sm font-light text-gray-600">Gender:</p>
+              </div>
+              <p class="text-lg">Male</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <div class="flex items-center justify-center text-gray-600">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+                </svg>
+                <p class="text-sm font-light text-gray-600">Origin:</p>
+              </div>
+              <p class="text-lg">Earth (C-137)</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <div class="flex items-center justify-center text-gray-600">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+                </svg>
+                <p class="text-sm font-light text-gray-600">Type:</p>
+              </div>
+              <p class="text-lg">Unknown</p>
+            </div>
+          </div>
+        </div>
+        <div class="m-4 border-b border-gray-400 pb-4">
+          <p class="text-gray-600 text-lg pb-2">Episodios</p>
+          <div class="grid md:grid-cols-4 gap-4">
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+            <div class="border border-gray-400 p-4 rounded-xl flex flex-col items-start">
+              <p class="text-xs font-light text-gray-600">Pilot</p>
+              <p class="text-lg">Male</p>
+              <p class="text-xs text-gray-600">DECEMBER 2, 2013</p>
+            </div>
+          </div>
+        </div>
+        <div class="m-4 border-b border-gray-400 pb-4">
+          <p class="text-gray-600 text-lg pb-2">Personajes interesantes</p>
+          <div class="grid md:grid-cols-2 gap-4">
+            <div class="border rounded-xl border-gray-400 flex relative">
+              <img class="item-img" src="./img/item-5.png" alt="">
+              <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                </svg>
+              </div>
+              <div class="p-3 w-full">
+                <div class="flex items-center">
+                  <div class="w-2 h-2 rounded-full bg-green-400"></div>
+                  <p class="ml-2 text-xs font-light text-gray-600">Alive - Human</p>
+                </div>
+                <h2 class="font-light">Morty Smith</h2>
+                <div class="mt-2">
+                  <p class="text-xs font-light text-gray-600">Last known location:</p>
+                  <p class="text-sm font-light">Story Train</p>
+                </div>
+                <div class="mt-2">
+                  <p class="text-xs font-light text-gray-600">Last known location:</p>
+                  <p class="text-sm font-light">Story Train</p>
+                </div>
+              </div>
+            </div>
+            <div class="border rounded-xl border-gray-400 flex relative">
+              <img class="item-img" src="./img/item-5.png" alt="">
+              <div class="item-fav py-1 px-1 bg-gray-200 rounded-full cursor-pointer text-gray-600 ml-2 hover:text-yellow-400">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                </svg>
+              </div>
+              <div class="p-3 w-full">
+                <div class="flex items-center">
+                  <div class="w-2 h-2 rounded-full bg-green-400"></div>
+                  <p class="ml-2 text-xs font-light text-gray-600">Alive - Human</p>
+                </div>
+                <h2 class="font-light">Morty Smith</h2>
+                <div class="mt-2">
+                  <p class="text-xs font-light text-gray-600">Last known location:</p>
+                  <p class="text-sm font-light">Story Train</p>
+                </div>
+                <div class="mt-2">
+                  <p class="text-xs font-light text-gray-600">Last known location:</p>
+                  <p class="text-sm font-light">Story Train</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex p-4 justify-end">
+          <button class="bg-green-900	rounded-full py-2 px-6 text-white mb-4">Compartir personaje</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
